<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
  <Button
  	android:layout_weight="1"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_gravity="center_vertical"
  	android:text="@string/dialog_mark_replace"
  	android:onClick="onBtnReplace"
  	/>
  	
  <Button
  	android:layout_weight="1"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_gravity="center_vertical"
  	android:text="@string/cancel_button"
  	android:onClick="onBtnCancel"
  	/>
  	
  <Button
 	android:layout_weight="1"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_gravity="center_vertical"
  	android:text="@string/dialog_mark_clear"
  	android:onClick="onBtnClear"
  	/>
</LinearLayout>
