<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:id="@+id/calendar_task_attribute_set_layout"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:layout_below="@+id/calendar_week_layout"
  	android:layout_alignLeft="@+id/calendar_date_text"
  	android:layout_alignRight="@+id/calendar_date_text"
  	android:layout_alignBottom="@+id/calendar_gridview"
  	android:visibility="gone"
  	>
  	<Button
  		android:id="@+id/calendar_task_attribute_task_date"
  	 	android:text="@string/date_button"
  		android:layout_width="100dp"
  	  	android:layout_height="100dp"
  	  	android:layout_gravity="left|top"
  	  	android:gravity="center"
  	  	android:paddingLeft="13dp"
  	 	android:paddingRight="13dp"
  	  	android:textStyle="bold"
  	  	android:background="@drawable/calendar_item_white"
  	  	/>
  	  
  	<Button
  		android:id="@+id/calendar_task_attribute_deadline"
  	 	android:text="@string/deadline_button"
  		android:layout_width="100dp"
  	  	android:layout_height="100dp"
  	  	android:gravity="center"
  	  	android:paddingLeft="13dp"
  	 	android:paddingRight="13dp"
  	  	android:textStyle="bold"
  	  	android:layout_gravity="right|top"
  	  	android:background="@drawable/calendar_item_white"
  	  	/>
  	  	
  	<Button
  		android:id="@+id/calendar_task_attribute_periodic"
  	 	android:text="@string/periodic_button"
  		android:layout_width="100dp"
  	  	android:layout_height="100dp"
  	  	android:layout_gravity="left|bottom"
  	  	android:gravity="center"
  	  	android:paddingLeft="13dp"
  	 	android:paddingRight="13dp"
  	  	android:textStyle="bold"
  	  	android:background="@drawable/calendar_item_white"
  	  	/>
  	  	
  	<Button
  		android:id="@+id/calendar_task_attribute_notifier"
  	 	android:text="@string/alarm_button"
  		android:layout_width="100dp"
  	  	android:layout_height="100dp"
  	  	android:layout_gravity="right|bottom"
  	  	android:gravity="center"
  	  	android:paddingLeft="13dp"
  	 	android:paddingRight="13dp"
  	  	android:textStyle="bold"
  	  	android:background="@drawable/calendar_item_white"
  	  	/>
  	  	
  	<Button
  		android:id="@+id/calendar_task_next"
  	 	android:text="@string/next_button"
  		android:layout_width="100dp"
  	  	android:layout_height="100dp"
  	  	android:layout_gravity="center"
  	  	android:paddingLeft="13dp"
  	 	android:paddingRight="13dp"
  	  	android:gravity="center"
  	  	android:textStyle="bold"
  	  	android:background="@drawable/calendar_item_white"
  	  	/>
  	  	
  	</FrameLayout>

