<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  >
  
  <LinearLayout
	  android:layout_weight="1"
	  android:layout_width="fill_parent"
	  android:layout_height="fill_parent"
  	  >
	  <TextView
	  	android:layout_weight="1"
	  	android:layout_width="fill_parent"
	  	android:layout_height="fill_parent"
	  	android:text="@string/task_overview_delete_scenario_title"
	  	android:gravity="center"
	  	android:textStyle="bold"
	  	/>
  </LinearLayout>
  
  <LinearLayout
	  android:layout_weight="1"
	  android:layout_width="fill_parent"
	  android:layout_height="fill_parent"
  	  >
  <Button
  	android:layout_weight="2"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:onClick="onBtnDeleteScenario"
  	android:text="@string/yes_button"
  	/>
  	
  <Button
  	android:layout_weight="2"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:onClick="onBtnDeleteScenarioCancel"
  	android:text="@string/no_button"
  	/>

  </LinearLayout>
</LinearLayout>
