<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:background="@drawable/alert_background">
  
  <Button
  	android:id="@+id/alert_title"
  	android:layout_width="200dp"
  	android:layout_height="wrap_content"
  	android:layout_marginLeft="15dp"
  	android:layout_marginTop="8dp"
  	android:text="@string/task_view_title"
  	android:gravity="center"
  	android:textColor="#ffffffff"
  	android:textSize="16dp"
  	android:ellipsize="marquee"
  	android:singleLine="true"
  	android:maxWidth="180dp"
  	android:background="@drawable/white_button_bg"
  	/>
  	
  <Button
  	android:id="@+id/alert_button_ok"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_below="@+id/alert_title"
  	android:layout_alignLeft="@+id/alert_title"
  	android:text="@string/ok_button"
  	android:background="@drawable/white_button_bg"
  	android:gravity="center"
  	android:textColor="#ffffffff"
  	android:padding = "8dp"
  	/>
  	
  <Button
  	android:id="@+id/alert_button_delay"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_below="@+id/alert_title"
  	
  	android:layout_toRightOf="@+id/alert_button_ok"
  	android:layout_marginRight="10dp"
  	android:text="@string/delay_button"
  	android:background="@drawable/white_button_bg"
  	android:gravity="center"
  	android:textColor="#ffffffff"
  	android:padding="8dp"
  	android:singleLine="true"
  	/>
</RelativeLayout>
